opam-version: "1.2"
name: "monomorphic"
version: "1.5"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/ocaml-monomorphic"
dev-repo: "https://github.com/kit-ty-kate/ocaml-monomorphic.git"
bug-reports: "https://github.com/kit-ty-kate/ocaml-monomorphic/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
]
available: [ocaml-version >= "4.02.3"]
tags: [
  "polymorphic"
  "compare"
  "equal"
  "equality"
  "monomorphic"
  "unsafe"
  "safe"
]
