opam-version: "2.0"
license: "MIT"
synopsis: "A small library used to shadow polymorphic operators (and functions) contained in the stdlib"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/ocaml-monomorphic"
dev-repo: "git://github.com/kit-ty-kate/ocaml-monomorphic.git"
bug-reports: "https://github.com/kit-ty-kate/ocaml-monomorphic/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "1.0"}
]
tags: [
  "polymorphic"
  "compare"
  "equal"
  "equality"
  "monomorphic"
  "unsafe"
  "safe"
]
