opam-version: "2.0"
version: "2.0"
synopsis:
  "A small library used to shadow polymorphic operators (and functions) contained in the stdlib"
maintainer: ["Kate <kit.ty.kate@disroot.org>"]
authors: ["Kate <kit.ty.kate@disroot.org>"]
license: "MIT"
tags: [
  "polymorphic" "compare" "equal" "equality" "monomorphic" "unsafe" "safe"
]
homepage: "https://github.com/kit-ty-kate/ocaml-monomorphic"
doc: "https://kit-ty-kate.github.io/ocaml-monomorphic"
dev-repo: "git+https://github.com/kit-ty-kate/ocaml-monomorphic.git"
bug-reports: "https://github.com/kit-ty-kate/ocaml-monomorphic/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "4.08"}
  "cppo" {>= "1.1.0"}
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
